# ChangeLog for dev-python/numdisplay
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/numdisplay/ChangeLog,v 1.1 2007/08/23 17:58:07 bicatali Exp $

*numdisplay-1.3 (23 Aug 2007)

  23 Aug 2007; Sébastien Fabbro <bicatali@gentoo.org> +metadata.xml,
  +numdisplay-1.3.ebuild:
  Initial import. Closing bug #147468.
